# pluma

./: configure.ac  index.html
2019-08-24-005502-7624-1@6849f9c99584_pluma-document_clang/: index.html  report-022036.html  report-0627f5.html  report-1dee02.html  report-1fb44c.html  report-28b99e.html  report-2cc723.html  report-313d3b.html  report-5999e4.html  report-636e73.html  report-692851.html  report-7e19f6.html  report-8e1ec7.html  report-9c7ae1.html  report-ae11bf.html  report-d4cf06.html  report-effa39.html  report-f2fb3c.html  report-f74ff1.html
2019-08-24-014425-7616-1@951b13aabafb_master/: index.html  report-07da41.html  report-182fdd.html  report-3a5046.html  report-52bf4f.html  report-5f68e2.html  report-66a7fc.html  report-6bb191.html  report-71736a.html  report-76bc65.html  report-8be41b.html  report-90b0e2.html  report-991312.html  report-9afff6.html  report-9f6db1.html  report-aca07d.html  report-b445e6.html  report-d005fc.html  report-f50009.html  report-fe6f47.html
2019-08-24-014905-1231-cppcheck@951b13aabafb_master/: 1.html  10.html  26.html  3.html  index.html
2019-08-25-134222-7630-1@4f7b30daa323_clang-UnreachableCode/: index.html  report-1cb0b3.html  report-1cf20a.html  report-24b52d.html  report-26f9fd.html  report-2c4eae.html  report-325835.html  report-3e55c9.html  report-4163a7.html  report-437370.html  report-454f2b.html  report-6bbadb.html  report-8cf043.html  report-9dccb7.html  report-b3e5ef.html  report-b720bb.html  report-dd9d62.html  (+3 more)
plugins/functionlist/: Makefile.am  functionlist.plugin.desktop.in  pluma-functionlist-list.c  pluma-functionlist-list.h  pluma-functionlist-plugin-list.c  pluma-functionlist-plugin-list.h  pluma-functionlist-plugin-view.c  pluma-functionlist-plugin-view.h  pluma-functionlist-plugin.c  pluma-functionlist-plugin.h  pluma-functionlist-view.c  pluma-functionlist-view.h
plugins/terminal/: Makefile.am  pluma-terminal-plugin.c  pluma-terminal-plugin.h  pluma-terminal-widget.c  pluma-terminal-widget.h  terminal.plugin.desktop.in
(+148 files in other folders)
